portum footer widgets vertical spacing fix

--- a/assets/css/style-portum.css
+++ b/assets/css/style-portum.css
@@ -6663,6 +6663,10 @@ body.ctdw-bar-visible #header.header--over-content
 {
     padding: 0 10px;
 }
+#footer #footer-widgets
+{
+    padding-bottom: 30px;
+}
 #footer #footer-bottom
 {
     padding: 15px 0;
